[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ReMoDe"
version = "0.1.0"
description = "Recursive Mode Detection for ordinal data"
authors = [
    { name = "Javier Garcia-Bernardo", email = "j.garciabernardo@uu.nl" },
    { name = "Madlen Hoffstadt", email = "m.f.hoffstadt@uva.nl" },
    { name = "Han van der Maas", email = "h.l.j.vanderMaas@uva.nl" }

]

dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "scipy"
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["metadata", "open-data", "privacy", "synthetic-data", "tabular datasets"]
license = { file = "LICENSE" }

dynamic = ["version"]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[tool.test]
pytest = ">=6.2.5"

[project.optional-dependencies]
test = [
    "ruff", "pytest", "mypy"
]

[project.urls]
homepage = "https://github.com/sodascience/remode"
repository = "https://github.com/sodascience/remode"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scipy.stats.*", "pandas.*"]
ignore_missing_imports = true